--- a/frontends/concrete-python/requirements.txt
+++ b/frontends/concrete-python/requirements.txt
@@ -4,5 +4,6 @@ networkx>=2.6
 numpy>=1.23
 scipy>=1.10
 torch>=1.13
-yowasp-yosys>=0.39.0
+yowasp-runtime==1.53
+yowasp-yosys==0.42.0.0.post734
 z3-solver>=4.12
