chore(frontend): [GPU release] enable compilation with timing support by default and use runtime environment variable to activate as required.

--- a/.github/workflows/concrete_python_release_gpu.yml
+++ b/.github/workflows/concrete_python_release_gpu.yml
@@ -104,7 +104,7 @@ jobs:
             
             cd /concrete/compilers/concrete-compiler/compiler
             make BUILD_DIR=/build CCACHE=ON DATAFLOW_EXECUTION_ENABLED=OFF Python3_EXECUTABLE=$(which python) \
-              CUDA_SUPPORT=ON CUDA_PATH=${{ env.CUDA_PATH }} python-bindings
+              CUDA_SUPPORT=ON TIMING_ENABLED=ON CUDA_PATH=${{ env.CUDA_PATH }} python-bindings
             
             echo "Debug: ccache statistics (after the build):"
             ccache -s
