feat(frontend): benchmark infrastructure

--- a/.github/workflows/concrete_python_checks.yml
+++ b/.github/workflows/concrete_python_checks.yml
@@ -2,16 +2,41 @@ name: Concrete Python Checks
 
 on:
   workflow_call:
+  workflow_dispatch:
 
 jobs:
   Checks:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-      - name: Pre-Commit Checks
+      #      - name: Pre-Commit Checks
+      #        run: |
+      #          sudo apt install -y graphviz libgraphviz-dev
+      #          cd frontends/concrete-python
+      #          make venv
+      #          source .venv/bin/activate
+      #          make pcc
+
+      - name: Checkout Slab repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        with:
+          repository: zama-ai/slab
+          path: slab
+          token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
+
+      - name: Send data to Slab
+        shell: bash
         run: |
-          sudo apt install -y graphviz libgraphviz-dev
+          echo "Computing HMac on results file"
+          SIGNATURE="$(slab/scripts/hmac_calculator.sh frontends/concrete-python/progress.processed.json '${{ secrets.JOB_SECRET }}')"
+          
           cd frontends/concrete-python
-          make venv
-          source .venv/bin/activate
-          make pcc
+          
+          echo "Sending results to Slab..."
+          curl -v -k \
+            -H "Content-Type: application/json" \
+            -H "X-Slab-Repository: ${{ github.repository }}" \
+            -H "X-Slab-Command: store_data_v2" \
+            -H "X-Hub-Signature-256: sha256=${SIGNATURE}" \
+            -d @progress.processed.json \
+            ${{ secrets.SLAB_URL }}
