chore(ci): shitch GPU python wheel test profile AMI.

--- a/ci/slab.toml
+++ b/ci/slab.toml
@@ -132,5 +132,5 @@ check_run_name = "Concrete Python Release (GPU)"
 
 [command.concrete-python-test-gpu-wheel]
 workflow = "concrete_python_test_gpu_wheel.yml"
-profile = "gpu-test-ubuntu22"
+profile = "gpu-test"
 check_run_name = "Concrete Python Test GPU Wheel"
