--- a/backends/concrete-cpu/implementation/Cargo.toml
+++ b/backends/concrete-cpu/implementation/Cargo.toml
@@ -25,20 +25,21 @@ bytemuck = "1.14.3"
 num-complex = { version = "0.4", default-features = false, features = [
   "bytemuck",
 ] }
+bincode = "1.3.3"
 
 rayon = { version = "1.6", optional = true }
 once_cell = { version = "1.16", optional = true }
 
-tfhe = { version = "0.7", features = [] }
+tfhe = { version = "0.7", features = ["integer"] }
 
 [target.x86_64-unknown-unix-gnu.dependencies]
-tfhe = { version = "0.7", features = ["x86_64-unix"] }
+tfhe = { version = "0.7", features = ["integer", "x86_64-unix"] }
 
 [target.aarch64-unknown-unix-gnu.dependencies]
-tfhe = { version = "0.7", features = ["aarch64-unix"] }
+tfhe = { version = "0.7", features = ["integer", "aarch64-unix"] }
 
 [target.x86_64-pc-windows-gnu.dependencies]
-tfhe = { version = "0.7", features = ["x86_64"] }
+tfhe = { version = "0.7", features = ["integer", "x86_64"] }
 
 [features]
 default = ["parallel", "std", "csprng"]
