--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -278,7 +278,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/zama-ai/concrete/actions/workflows/concrete_python_push_docker_image.yml/dispatches \
-            -d "{\"ref\": \"$TAG\", \"inputs\": {\"tag\":\"$TAG\"}}"
+            -d "{\"ref\": \"$TAG\", \"inputs\": {\"tag\":\"v$TAG\"}}"
 
   test-linux-x86:
     needs: [build-linux-x86]
