chore(ci): Reenable GOU benchmark

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -190,13 +190,13 @@ jobs:
     with:
       command: compiler-cpu-benchmark
 
-  # compiler-gpu-benchmark:
-  #   needs: file-change
-  #   if: needs.file-change.outputs.push-main == 'true'
-  #   uses: ./.github/workflows/start_slab.yml
-  #   secrets: inherit
-  #   with:
-  #     command: compiler-gpu-benchmark
+  compiler-gpu-benchmark:
+    needs: file-change
+    #if: needs.file-change.outputs.push-main == 'true'
+    uses: ./.github/workflows/start_slab.yml
+    secrets: inherit
+    with:
+      command: compiler-gpu-benchmark
 
 #################################################
 # Optimizer jobs ################################
