--- a/frontends/concrete-python/requirements.dev.txt
+++ b/frontends/concrete-python/requirements.dev.txt
@@ -18,3 +18,7 @@ delocate==0.10.4; sys_platform == 'darwin'
 wheel==0.40.0
 
 py-progress-tracker==0.7.0
+
+linkcheckmd>=1.4.0
+linkchecker>=10.3.0
+mistletoe>=0.9.0
