feat(ci): update ruff

--- a/frontends/concrete-python/.ruff.toml
+++ b/frontends/concrete-python/.ruff.toml
@@ -18,7 +18,9 @@ ignore = [
 "concrete/fhe/mlir/processors/all.py" = ["F401"]
 "concrete/fhe/mlir/processors/assign_bit_widths.py" = ["ARG002"]
 "concrete/fhe/mlir/converter.py" = ["ARG002", "B011", "F403", "F405"]
-"examples/**" = ["PLR2004"]
-"tests/**" = ["PLR2004", "PLW0603", "SIM300", "S311"]
+"concrete/**" = ["RUF010"]
+"examples/**" = ["PLR2004", "RUF010"]
+"tests/**" = ["PLR2004", "PLW0603", "SIM300", "S311", "RUF010"]
+"tests/execution/test_tfhers.py" = ["S605"]
 "benchmarks/**" = ["S311", "B023"]
 "scripts/**" = ["DTZ005"]
