feat(compiler/bindings): support moving SKs around keygen with them

--- a/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
@@ -46,6 +46,7 @@ declare_mlir_python_sources(
   concrete/compiler/library_compilation_result.py
   concrete/compiler/library_support.py
   concrete/compiler/library_lambda.py
+  concrete/compiler/lwe_secret_key.py
   concrete/compiler/parameter.py
   concrete/compiler/public_arguments.py
   concrete/compiler/public_result.py
