--- a/frontends/concrete-python/.ruff.toml
+++ b/frontends/concrete-python/.ruff.toml
@@ -16,7 +16,7 @@ ignore = [
 "**/__init__.py" = ["F401"]
 "concrete/fhe/compilation/configuration.py" = ["ARG002"]
 "concrete/fhe/mlir/processors/all.py" = ["F401"]
-"concrete/fhe/mlir/processors/assign_bit_widths.py" = ["ARG002"]
+"concrete/fhe/mlir/processors/assign_bit_widths.py" = ["ARG002", "RUF012"]
 "concrete/fhe/mlir/converter.py" = ["ARG002", "B011", "F403", "F405"]
 "concrete/**" = ["RUF010"]
 "examples/**" = ["PLR2004", "RUF010"]
